worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-app-eks-worker
  template:
    metadata:
      labels:
        app: voting-app-eks-worker
    spec:
      containers:
      - name: worker-container
        image: rajdoc111/voting-app-eks-worker:latest
